After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 751449 - dashdemux: wrong duration computed by gst_mpd_client_setup_representation
dashdemux: wrong duration computed by gst_mpd_client_setup_representation
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.5.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-06-24 16:17 UTC by Florin Apostol
Modified: 2015-08-16 13:36 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch to correct the argument (1.19 KB, patch)
2015-06-24 16:18 UTC, Florin Apostol
committed Details | Review

Description Florin Apostol 2015-06-24 16:17:45 UTC
The last parameter of gst_mpd_client_add_media_segment function is a duration. But when called from gst_mpd_client_setup_representation, the last argument is set to PeriodEnd:

      /* here we should have a single segment for each representation, whose URL is encoded in the baseURL element */
      if (!gst_mpd_client_add_media_segment (stream, NULL, 1, 0, 0,
              PeriodEnd - PeriodStart, PeriodStart, PeriodEnd)) {
        return FALSE;
      }

The last argument should be PeriodEnd-PeriodStart.
Comment 1 Florin Apostol 2015-06-24 16:18:20 UTC
Created attachment 306024 [details] [review]
patch to correct the argument
Comment 2 Sebastian Dröge (slomo) 2015-06-25 08:17:21 UTC
Please put the URL to the Bugzilla bug into your commit messages, saves me a "git commit --amend" :) You can also use tools like git-bz to make all this more convenient.

commit dbf12ab760c1a5c735617823fff0cc487439da1d
Author: Florin Apostol <florin.apostol@oregan.net>
Date:   Wed Jun 24 17:16:46 2015 +0100

    dashdemux: Corrected duration argument for gst_mpd_client_add_media_segment call
    
    The last parameter of gst_mpd_client_add_media_segment function is a
    duration. But when called from gst_mpd_client_setup_representation, the
    last argument was wrongly set to PeriodEnd
    
    https://bugzilla.gnome.org/show_bug.cgi?id=751449